update tailwind config

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -8,8 +8,7 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   color: #ededed;
   background: black;
-  /* font-family: Arial, Helvetica, sans-serif; */
-}
+} */
