--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -42,7 +42,7 @@
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
+    --background: 220, 10%, 12%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -115,7 +115,11 @@
 .react-datepicker__input-container input {
   background-color: #1a1d21 !important;
   width: 100%;
+  height: 100%;
+  padding: 1rem 1rem 1rem 2.7rem;
+  border-radius: 10px;
   outline: none;
+  /* color: gray; */
 }
 
 .react-datepicker__day--selected {
